<resources>
    <string name="app_name">Mi Avatar</string>
    <string name="masculino">Varón</string>
    <string name="femenino">Hembra</string>
    <string name="nombre">Nombre</string>
    <string name="sexo">Sexo</string>
    <string name="clase">Clase</string>
    <string name="vida">Vida</string>
    <string name="fuerza">Fuerza</string>
    <string name="magia">Magia</string>
    <string name="velocidad">Velocidad</string>
    <string name="comenzar">Comenzar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="dialogNombre">Introduzca el nombre de su avatar:</string>
    <string name="dialogRaza">Seleccione la raza de su avatar:</string>
    <string name="dialogSexo">Seleccione el sexo de su avatar:</string>
    <string name="dialogClase">Seleccione la clase de su avatar:</string>
    <string-array name="razaArray">
        <item>@string/elfo</item>
        <item>@string/enano</item>
        <item>@string/hobbit</item>
        <item>@string/humano</item>
    </string-array>
    <string name="elfo">Elfo</string>
    <string name="enano">Enano</string>
    <string name="hobbit">Hobbit</string>
    <string name="humano">Humano</string>
    <string-array name="claseArray">
        <item>@string/arquero</item>
        <item>@string/guerrero</item>
        <item>@string/mago</item>
        <item>@string/herrero</item>
        <item >@string/minero</item>
    </string-array>
    <string name="arquero">Arquero</string>
    <string name="guerrero">Guerrero</string>
    <string name="mago">Mago</string>
    <string name="herrero">Herrero</string>
    <string name="minero">Minero</string>
    <string name="raza">Raza</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>



</resources>